--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Biglietteria</h1>
-        <form>
+        <form id="ticket-form">
         <div class="mb-3">
             <label for="age" class="form-label">Quanti hanni hai?</label>
             <input type="number" class="form-control" id="age" placeholder="Inserisci la tua età">
@@ -25,7 +25,6 @@
         <div class="mt-4" id="result"></div>
     </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
-    <script src="js/calcolatore.js"></script>
+    <script src="js/calcolatoreBS.js"></script>
 </body>
 </html>
