--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1 class="mb-4">Biglietteria</h1>
         <form id="ticket-form">
         <div class="mb-3">
-            <label for="age" class="form-label">Quanti hanni hai?</label>
+            <label for="age" class="form-label">Quanti anni hai?</label>
             <input type="number" class="form-control" id="age" placeholder="Inserisci la tua età">
         </div>
         <div class="mb-3">
