Aggiunti required ai form

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <form id="ticket-form">
         <div class="mb-3">
             <label for="age" class="form-label">Quanti anni hai?</label>
-            <input type="number" class="form-control" id="age" placeholder="Inserisci la tua età">
+            <input type="number" class="form-control" id="age" placeholder="Inserisci la tua età" required>
         </div>
         <div class="mb-3">
             <label for="distance" class="form-label">Quanti km devi fare?</label>
-            <input type="number" class="form-control" id="distance" placeholder="Inserisci i km da percorrere">
+            <input type="number" class="form-control" id="distance" placeholder="Inserisci i km da percorrere" required>
         </div>
         <button type="submit" class="btn btn-primary">Invia</button>
         </form>
